# escrow

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  JUDGE_PROMPTS.md  KNOWN_ISSUES.md  PRODUCT_PLAN.md  README.md  RESULTS.md  Verdict_Comprehensive_Task_Division.md  agent_demo.py  frontendplan.md  package.json  presentation.py  pyproject.toml  results.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
_legacy/demo/: weather_api.py
_legacy/guardian/: guardian.py
_legacy/judge-frontend/: court_watcher.py
_legacy/server/: judge.py  requirements.txt
_legacy/verdict-frontend/: index.html  package-lock.json  package.json
_legacy/verdict-frontend/src/: App.jsx  index.css  useVerdictServices.js  utils.js
_legacy/verdict-frontend/src/components/: ControlPanel.jsx  CourtDashboard.jsx  Dashboard.jsx  LandingPage.jsx  NetworkExplorer.jsx  OpinionModal.jsx  Sidebar.jsx
apps/consumer_agent/: pyproject.toml
apps/consumer_agent/src/consumer_agent/: __init__.py  client_x402.py  escrow_client.py  flow.py  receipt_client.py  run_dispute_path.py  run_happy_path.py
apps/consumer_agent/tests/: test_flow.py
apps/demo_runner/: pyproject.toml
apps/demo_runner/src/demo_runner/: __init__.py  demo.py  orchestrator.py  push_dashboard_payment.py  server.py
apps/evidence_service/: pyproject.toml
apps/evidence_service/src/evidence_service/: __init__.py  chain_anchor.py  routes.py  server.py  server_state.py  storage.py
apps/evidence_service/tests/: test_evidence_service.py
apps/judge_service/: pyproject.toml
apps/judge_service/src/judge_service/: __init__.py  fact_extractor.py  llm_judge.py  server.py  server_state.py  signer.py  storage.py  submit_ruling.py  telegram_notifier.py  verdict_package.py  verifier.py  watcher.py
apps/judge_service/tests/: test_judge_pipeline.py  test_manual_review.py
apps/protocol_mcp/: pyproject.toml
apps/protocol_mcp/src/protocol_mcp/: __init__.py  server.py
apps/protocol_mcp/tests/: test_server.py
apps/provider_api/: pyproject.toml
apps/provider_api/src/provider_api/: __init__.py  protected_routes.py  server.py  x402_integration.py
apps/reputation_service/: pyproject.toml
apps/reputation_service/src/reputation_service/: __init__.py  api.py  scorer.py  storage.py  watcher.py
apps/reputation_service/tests/: test_reputation_storage.py
artifacts/validation/: addresses.json  validation.env  verdict_validation.db-shm  verdict_validation.db-wal
console/: court_server.py  court_watcher.py  index.html  verdict_api.py
contracts/: AgentCommerce.sol  AgentCourt.sol  hardhat.config.ts  package.json  tsconfig.json
contracts/abi/: AgentCourt.json  Escrow.json
contracts/deployments/: goat-testnet3.json
contracts/scripts/: deploy.ts
demo/: demo.py  test_judge.py
docs/: changes.md  completion.md  consumer-quickstart.md  project_management_rules.md  provider-quickstart.md  release-checklist.md  smoke-checklist.md  two_person_execution_plan.md
docs/console_ops/: README.md  notes.md  task_breakdown.md  task_list.md
docs/judge_reputation/: README.md  notes.md  reputation_v2_migration.md  task_breakdown.md  task_list.md
docs/payments_evidence/: README.md  notes.md  task_breakdown.md  task_list.md
docs/protocol_contracts/: README.md  abi_compatibility.md  deployment_manifest.md  notes.md  schema_versions.md  task_breakdown.md  task_list.md
docs/runbooks/: demo-runbook.md  operator-runbook.md  provider-runbook.md  vc-demo-script.md
examples/: consumer_demo.py  fastapi_provider.py  provider.env.example
foundry/: README.md
foundry/script/: Deploy.s.sol  DeployLocal.s.sol
foundry/src/: Court.sol  EvidenceAnchor.sol  JudgeRegistry.sol  MockUSDC.sol  Vault.sol
foundry/test/: Court.t.sol  EvidenceAnchor.t.sol
guardian/: guardian.py  requirements.txt
judge-frontend/: court_server.py  court_watcher.py  index.html  verdict_api.py
scripts/: bootstrap_split_local.sh  demo.sh  run_module.sh
server/: app.py  judge.py
