[project]
name = "demo-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "web3>=7.0.0",
  "fastapi>=0.112.0",
  "pydantic>=2.7.0",
]

[project.scripts]
demo = "demo_runner.demo:main"
dashboard-payment = "demo_runner.push_dashboard_payment:main"
demo-server = "demo_runner.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_runner"]
