[project]
name = "judge-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.44.0",
  "fastapi>=0.112.0",
  "httpx>=0.27.0",
  "python-telegram-bot>=21.0.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
  "verdict-protocol",
]

[project.scripts]
judge-service = "judge_service.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judge_service"]
