[project]
name = "provider-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "x402>=2.2.0",
  "verdict-protocol",
]

[project.scripts]
provider-api = "provider_api.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_api"]
