[project]
name = "reputation-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "verdict-protocol",
]

[project.scripts]
reputation-service = "reputation_service.api:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reputation_service"]
